# desafio-magalu

./: .env  docker-compose.yml  pyproject.toml
api/: urls.py  views.py
conf/: settings.py  urls.py
entity/: admin.py  enums.py  models.py
entity/migrations/: 0001_initial.py  0002_auto_20240712_1442.py  0003_notification_message.py
entity/serializers/: serializer.py
